# optimpoly

./: .cproject  .gitignore  .nfs000000000013dd4800000038  .project  CMakeLists.txt  Doxyfile  FindNLOPT.cmake  Makefile  Makefile~  README.md  README.md~  README.org  SensorOffset.cf  ball_traj_sl.txt  dmp.json  install.sh  lookup_May_2016.txt  mainpage.txt  makefile  player.cfg  test
Debug/: makefile  objects.mk  optimpoly
Debug/src/: optimpoly.d  subdir.mk
SL_code/: CMakeLists.txt  copy_code.sh  player_task.c  readme.txt  table.h  table_tennis_common.c  table_tennis_common.h  table_tennis_graphics.c  table_tennis_task.c
SL_code/grav_comp/: CMakeLists.txt  grav_comp.c
SL_code/player/: CMakeLists.txt  table_tennis_task.c
SL_code/serve/: CMakeLists.txt  dmp_task.c  serve_task.c
carma/ccode/: utils.h
carma/include/: carma.h  constants.h  kalman.h  kinematics.hpp  lookup.h  player.hpp  tabletennis.h
carma/old/: kinematics.hpp  optim.hpp  test_kinematics.cpp
carma/src/: carma.cpp  extkalman.cpp  kalman.cpp  kinematics.cpp  lookup.cpp  optim.cpp  player.cpp  table_tennis.cpp
carma/test/: kalman.cpp  kinematics.cpp  optim.cpp  table_tennis.cpp
cmake_files/cmakelists_mpi/: CMakeLists.txt
cmake_files/cmakelists_mpi/src/: CMakeLists.txt
cmake_files/cmakelists_mpi/test/: CMakeLists.txt
cmake_files/cmakelists_robot/: CMakeLists.txt
cmake_files/cmakelists_robot/src/: CMakeLists.txt
cmakelists_robot/test/: CMakeLists.txt
config/: Limits.cfg  player.cfg  player.yaml  serve.cfg  serve.yaml
config/lookup/: lookup_April_2016.txt
data/19.8.18/: balls.txt  joints.txt
data/24.8.18/: balls.txt  joints.txt
data/29.7.18/: joints_black.txt  joints_red.txt
examples/: Makefile  est_prior  ex_auto_ipopt.cpp  ex_auto_nlopt.cpp  ex_bvp.cpp  ex_estimate_prior.cpp  ex_zmq.cpp  nlopt_autodiff
include/: SL.h  ball_interface.h  extra.h  json.hpp  kinematics.h  optimpoly.h  sl_interface.h  sl_structs.h  table_tennis.h  utils.h
include/optim/: constants.h  kinematics.h  optim.h  table.h  utils.h
include/player/: constants.h  kalman.h  kinematics.hpp  lookup.h  player.hpp  sl_interface.h  tabletennis.h
include/serve/: dmp.h  rbf.h  serve.h
journal/: README.md  alg_one.tex  alg_two.tex  conclusion.tex  cover_letter.txt  experiments.tex  introduction.tex  method.tex  parameterEstimation.tex  preamble.tex  problemStatement.tex  relatedWork.tex  root.tex  simulations.tex  ttRef.bib
journal/Figures/: graphicalModel.eps  graphicalModel.eps_tex  graphicalModel.pdf_tex  graphicalModel_test.eps  graphicalModel_test.eps_tex  offline.eps  predErrorReductionSpin.pdf_tex  predictionModels.pdf_tex  racket_ball_traj_0.eps  racket_ball_traj_1.eps  racket_ball_traj_2.eps  tableTennisVHP.eps  trainBounce.eps  velRebound.eps  velRebound2.eps  velXRebound.eps  velYRebound.eps  velZRebound.eps
journal/tikz/: algs_mismatch.tex  algs_obs_noise.tex  compare-players-real.tex
json/: #player.json#  .nfs0000000218c5160700000139  cam_log_regr_params_okan.json  dmp.json  dmp12.json  dmp15.json  dmp16.json  dmp18.json  dmp19.json  dmp20.json  dmp21.json  dmp4.json  dmp9.json  dmp_10_16-Nov-2018.json  dmp_11_16-Nov-2018.json  dmp_12_16-Nov-2018.json  dmp_13_16-Nov-2018.json  dmp_14_16-Nov-2018.json  dmp_15_16-Nov-2018.json  dmp_15_18_19_20_21.json  dmp_1_16-Nov-2018.json  dmp_2_16-Nov-2018.json  dmp_3_16-Nov-2018.json  dmp_4_16-Nov-2018.json  dmp_5_16-Nov-2018.json  dmp_6_16-Nov-2018.json  dmp_8_16-Nov-2018.json  rbf_0.json  rbf_0_15.11.18.json  rbf_1.json  rbf_10_15.11.18.json  rbf_10_16.11.18.json  rbf_12_16.11.18.json  rbf_13_15.11.18.json  rbf_13_16.11.18.json  rbf_14.json  rbf_14_16.11.18.json  rbf_2.json  rbf_2_16.11.18.json  rbf_3_15.11.18.json  (+12 more)
json/old/: dmp10.json  dmp12.json  dmp18.json  dmp19.json  dmp2.json  dmp20.json  dmp6.json  dmp9.json  dmp_10_16-Nov-2018.json  dmp_12_16-Nov-2018.json  dmp_13_16-Nov-2018.json  dmp_14_16-Nov-2018.json  dmp_15_16-Nov-2018.json  dmp_2_4_6_9_10.json  dmp_3_16-Nov-2018.json  dmp_4_16-Nov-2018.json  dmp_5_16-Nov-2018.json  dmp_6_16-Nov-2018.json  dmp_8_16-Nov-2018.json  rbf_1.json  rbf_11_15.11.18.json  rbf_12_15.11.18.json  rbf_1_15.11.18.json  rbf_2_15.11.18.json  rbf_4_15.11.18.json  rbf_7_15.11.18.json
matlab/: load_demo_python.m  load_joints_data.m  myButter2ndOrder.m  plot_joints_data.m  regress_basis_fncs.m  runtime_hist.fig
matlab/DMP/: CAN.m  DDMP.m  DMP.m  RDMP.m  trainMultiDMPs.m
matlab/RL_Okan/: FD.m
matlab/WAM/: BarrettWAM.m  init_wam.m  load_wam_links.m
old/: Makefile  sl_interface.old.cpp
old/ccode/: kinematics.c  kinematics.h  kinematics_old.h  optim.c  optims.h  player.h  utils.c  utils.h
python/: .#calibrate_cams.py  align_robot_with_cam.py  ball_locs_[750, 7380]_[0, 1].pickle  barrett_wam_kinematics.py  calibrate_cams.py  calibrate_cams_opencv.py  calibrate_est_P_mat.py  calibrate_nonlin.py  find_balls.py  json_pretty.py  multi_dof_lasso.py  plot_movement.py  process_movement.py  racket_calc.py  server_3d_conf_ping.json  train_movement_pattern.py
scripts/: ball_prediction_mismatch.cpp  compare_deriv_with_num_diff.cpp  count_land.cpp  outlier_prediction.cpp  symplectic_4th_order_int.cpp  time_efficiency.cpp  time_spin_based_racket_calc.cpp
src/: CMakeLists.txt  ball_interface.cpp  example.c  extra.c  kinematics.c  optimpoly.c  optimpoly.c~  sl_interface.cpp  table_tennis.c  utils.c
src/optim/: defensive_optim.cpp  estimate_ball.cpp  focused_optim.cpp  invkin.cpp  ipopt_ex.cpp  kinematics.c  kinematics.cpp  lazyoptim.cpp  nlopt_ex.cpp  optim.cpp  optimpoly.cpp  optimrest.cpp  racket_optim.cpp  rest_optim.cpp  utils.c  utils.cpp  vhp.cpp  vhp_optim.cpp
src/player/: estimate_ball.cpp  extkalman.cpp  kalman.cpp  kinematics.cpp  lookup.cpp  player.cpp  sl_interface.cpp  table_tennis.cpp  traj.cpp
src/serve/: dmp.cpp  rbf.cpp  serve.cpp
test/: #test_interface.cpp#  CMakeLists.txt  ball_params_mismatch  test.cfg  test_autodiff.cpp  test_derivatives.cpp  test_interface.cpp  test_kalman.cpp  test_kinematics.cpp  test_nlopt.cpp  test_optim.cpp  test_roboptim.cpp  test_serve.cpp  test_table_tennis.cpp
(+46 files in other folders)
